[ui][fix] overflow navbar breadcrumbs

--- a/frappe/public/less/navbar.less
+++ b/frappe/public/less/navbar.less
@@ -210,6 +210,13 @@
 
 #navbar-breadcrumbs > li > a {
 	padding: 6px 15px 10px 0px;
+
+	@media (max-width: 1199px) {
+		width: 140px;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		white-space: nowrap;
+	}
 }
 
 .toolbar-user-fullname {
